operation log & interceptor